--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,19 +48,18 @@ jobs:
       name: Setup Luarocks
       uses: leafo/gh-actions-luarocks@v4
     -
-      name: Install Tools
-      run: |
-        sudo apt install lcov -y
-        luarocks install testcase
-        luarocks install errno
-    -
       name: Install
       run: |
         luarocks make REALPATH_COVERAGE=1
     -
+      name: Install Tools
+      run: |
+        sudo apt install lcov -y
+        luarocks install assert
+    -
       name: Run Test
       run: |
-        testcase ./test/
+        lua ./test/realpath_test.lua
     -
       name: Generate coverage reports
       run: |
