--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,10 @@
 name: test
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'LICENSE'
 
 jobs:
   luacheck:
@@ -11,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
     -
       name: Setup Lua
-      uses: leafo/gh-actions-lua@v8.0.0
+      uses: leafo/gh-actions-lua@v8
     -
       name: Setup Luarocks
       uses: leafo/gh-actions-luarocks@v4
@@ -31,7 +35,6 @@ jobs:
           - "5.2"
           - "5.3"
           - "5.4"
-          - "luajit-2.0.5"
           - "luajit-openresty"
     steps:
     -
@@ -41,7 +44,7 @@ jobs:
         submodules: 'true'
     -
       name: Setup Lua ${{ matrix.lua-version }}
-      uses: leafo/gh-actions-lua@v8.0.0
+      uses: leafo/gh-actions-lua@v8
       with:
         luaVersion: ${{ matrix.lua-version }}
     -
@@ -65,8 +68,9 @@ jobs:
       run: |
         sh ./covgen.sh
     -
-      name: Upload c coverage to Codecov
-      uses: codecov/codecov-action@v2
+      name: Upload C coverage to Codecov
+      uses: codecov/codecov-action@v4
       with:
         files: ./coverage/lcov.info
+        token: ${{ secrets.CODECOV_TOKEN }}
         flags: unittests
